--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+  <script src="assets/js/jquery-3.6.0.slim.min.js" ></script>
+  <script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
