--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
   <script src="assets/js/jquery-3.6.0.slim.min.js" ></script>
   <script src="assets/js/popper.min.js"></script>
